# Fastapi-clean-architecture

./: .env-example  Dockerfile  README.md  api.http  database.db  docker-compose.yml  pyproject.toml  run.sh
app/: config.py  dependencies.py  main.py
app/models/: deepseek_models.py  openrouter_models.py  recruitment_models.py
app/routers/: deepseek_router.py  openrouter_router.py  recruitment_router.py
app/services/: deepseek_service.py  openrouter_service.py  recruitment_service.py
tests/test_routers/: test_deepseek_router.py  test_openrouter_router.py  test_recruitment_router.py
tests/test_services/: test_deepseek_service.py  test_openrouter_service.py  test_recruitment_service.py
